# arme2cosmos

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
arme2cosmos/: __init__.py  artmap.py  cli.py  convert.py  coverage.py  emit.py  model.py  parser.py  report.py
docs/: coverage.md  property_map.md
tests/: test_artmap.py  test_convert.py  test_parser.py
